Bug 232296 - New calendars created from file menu should not display any resources
Summary: New calendars created from file menu should not display any resources
Status: CLOSED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-27 01:49 UTC by Sabine Faure
Modified: 2010-06-26 00:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-03-27 01:49:37 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Go to File menu/New
- A new window opens called New Calendar - KOrganizer appears

In it all the resources you've created up till now are listed at the moment whereas they should not be any.

Note: If I understood the idea correctly this functionality aim is to create a new calendar and enter several events in it then send it via email to another person so that he can open it and merge it in his own calendar. This obviously only applies if there is no Kolab calendar set up between the two persons otherwise it's silly. Also for quite a lot of events it would not be as efficient to list the other person as an attendee (lots of question to answer).

Trunk, Svn Rev 1107667
Comment 1 Sabine Faure 2010-04-09 22:22:24 UTC
I am setting this bug as High priority since it prevents me to test many secondary window functionalities from the File menu (ex: save, save as, revert)

Trunk Svn Rev 1112991
Comment 2 Sergio Martins 2010-06-02 13:17:58 UTC
SVN commit 1133749 by smartins:

We don't open new windows that bypass akonadi now.

BUG: 232296


 M  +1 -5      actionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1133749
Comment 3 Sabine Faure 2010-06-26 00:49:40 UTC
The File menu/New functionality has been removed in the meantime so I am closing this bug since it is not relevant anymore and I cannot retest it anymore.