We don't open new windows that bypass akonadi now.

BUG: 232296

svn path=/trunk/KDE/kdepim/; revision=1133749