actionmanager.cpp
@@ -309,10 +309,7 @@ void ActionManager::initActions()
   //~~~~~~~~~~~~~~~~~~~~~~~ LOADING / SAVING ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   if ( mIsPart ) {
     if ( mMainWindow->hasDocument() ) {
-      KAction *a = mACollection->addAction( KStandardAction::New, this, SLOT(file_new()) );
-      mACollection->addAction( "korganizer_openNew", a );
-
-      a = mACollection->addAction( KStandardAction::Open, this, SLOT(file_open()) );
+      KAction *a = mACollection->addAction( KStandardAction::Open, this, SLOT(file_open()) );
       mACollection->addAction( "korganizer_open", a );
     }
 
@@ -322,7 +319,6 @@ void ActionManager::initActions()
     mACollection->addAction( "korganizer_print_preview", a );
     a->setEnabled( !KMimeTypeTrader::self()->query("application/pdf", "KParts/ReadOnlyPart").isEmpty() );
   } else {
-    KStandardAction::openNew( this, SLOT(file_new()), mACollection );
     KStandardAction::open( this, SLOT(file_open()), mACollection );
     KStandardAction::print( mCalendarView, SLOT(print()), mACollection );
     QAction * preview = KStandardAction::printPreview( mCalendarView, SLOT(printPreview()), mACollection );
